--- a/course-links.qmd
+++ b/course-links.qmd
@@ -3,15 +3,15 @@ title: "Useful links"
 ---
 
 +----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Course GitHub organization | 🔗 on [GitHub](https://github.com/INFO-511-F24)                                                                                                                                                                                                       |
+| Course GitHub organization | 🔗 on [GitHub](https://github.com/INFO-511-S25)                                                                                                                                                                                                       |
 +----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Google Collab              | 🔗 <https://colab.research.google.com/>                                                                                                                                                                                                               |
 +----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Slack                      | 🔗 [info511fall2024](https://info511fall2024.slack.com)                                                                                                                                                                                               |
+| Slack                      | 🔗 [info511spring2025](https://info511spring2025.slack.com)                                                                                                                                                                                           |
 +----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Class recordings           | 🔗 on [Panopto](https://arizona.hosted.panopto.com/Panopto/Pages/Sessions/List.aspx?folderID=61cffeec-57c6-4caa-a60a-b1c3017974d4)                                                                                                                    |
 +----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Gradebook                  | 🔗 on [D2L](https://d2l.arizona.edu/d2l/home/1478216)                                                                                                                                                                                                 |
+| Gradebook                  | 🔗 on [D2L](https://d2l.arizona.edu/d2l/home/1550484)                                                                                                                                                                                                 |
 +----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Textbooks                  | 🔗 [Data Science from Scratch](https://arizona-ua.userservices.exlibrisgroup.com/view/action/uresolver.do?operation=resolveService&package_service_id=43729147450003843&institutionId=3843&customerId=3840) (must sign-in via U of A Libraries)       |
 |                            |                                                                                                                                                                                                                                                       |
