--- a/course-syllabus.qmd
+++ b/course-syllabus.qmd
@@ -1,6 +1,6 @@
 ---
 title: "INFO 511 - Fundamentals of Data Science"
-subtitle: "Fall 2024"
+subtitle: "Spring 2025"
 format:
   html: default
   pdf: default
@@ -13,7 +13,7 @@ The course establishes the foundation for advanced data-intensive classes, provi
 
 ## Course offering
 
-642-2244-1 INFO 511 101 201 – Fundamentals of Data Science
+468-2251-1 INFO 511 201 – Fundamentals of Data Science
 
 ## Instructor Information
 
@@ -26,8 +26,6 @@ Assistant Professor of Practice,
 School of Information
 
 [gchism\@arizona.edu](mailto:gchism@arizona.edu)
-
-**Office**: Harvill 420
 
 **Office Hours**: Tuesdays, 11:30am-12:30pm, or by appointment via Zoom
 
@@ -42,7 +40,7 @@ Videos of each lecture will be available no later than the Monday of each week b
 
 ## Course Objective
 
-This course will (1) discuss effective approaches for acquiring, manipulating, and analyzing data, (2) outline fundamental concepts in programming such as variables, data types, and control structures, (3) discuss the use of Python libraries that are central for data science (e.g., NumPy, Matplotlib), (4) present a solidfoundation in descriptive statistics, probability and (5) discuss the mathematical foundations that are essential for data science.
+This course will (1) discuss effective approaches for acquiring, manipulating, and analyzing data, (2) outline fundamental concepts in programming such as variables, data types, and control structures, (3) discuss the use of Python libraries that are central for data science (e.g., NumPy, Matplotlib), (4) present a solid foundation in descriptive statistics, probability and (5) discuss the mathematical foundations that are essential for data science.
 
 ## Learning Outcomes
 
@@ -89,11 +87,14 @@ All remaining books are **freely available online**.
 
 ## Course competencies
 
-This course is a core requirement for the MS in Data Science. It will help you master the following competencies:
+This course is a core requirement for the MS in Data Science.
+It will help you master the following competencies:
 
-- MS1. Students will establish the ability to exercise the four key techniques of computational thinking: decomposition, pattern recognition, abstraction, and algorithms.
+-   MS1.
+    Students will establish the ability to exercise the four key techniques of computational thinking: decomposition, pattern recognition, abstraction, and algorithms.
 
-- MS2. Students will obtain the skills of collecting, manipulating, and analyzing different types of data at different scales, and interpreting the results properly.
+-   MS2.
+    Students will obtain the skills of collecting, manipulating, and analyzing different types of data at different scales, and interpreting the results properly.
 
 ## Course Schedule
 
@@ -132,7 +133,7 @@ If an announcement is sent on a Friday or over the weekend, I will assume that y
 
 -   If you have a question during lecture, feel free to ask it! There are likely other students with the same question, so by asking you will create a learning opportunity for everyone.
 -   The teaching team is here to help you be successful in the course. You are encouraged to attend office hours to ask questions about the course content and assignments. Many questions are most effectively answered as you discuss them with others, so office hours are a valuable resource. Please use them!
--   Outside of class and office hours, any general questions about course content or assignments should be posted on the course [Slack](https://info511fall2024.slack.com). There is a chance another student has already asked a similar question, so please check the other posts on Slack before adding a new question. If you know the answer to a question posted on Slack, I encourage you to respond!
+-   Outside of class and office hours, any general questions about course content or assignments should be posted on the course [Slack](https://info511spring2025.slack.com). There is a chance another student has already asked a similar question, so please check the other posts on Slack before adding a new question. If you know the answer to a question posted on Slack, I encourage you to respond!
 
 Check out the [Support](/course-support) page for more resources.
 
@@ -158,9 +159,11 @@ See the [U of A Libraries loaner technology](https://lib.arizona.edu/borrow/tech
 
 ## Activities & Assessment
 
-You will be assessed based on five components: application exercises, labs, exams, project, and teamwork.
+You will be assessed based on five components: application exercises, labs, assignments, project, and teamwork.
 
 ### Application exercises
+
+**Each due Friday the following week after assigned**
 
 Parts of some lectures will be dedicated to working on Application Exercises (AEs).
 These exercises which give you an opportunity to practice apply the statistical concepts and code introduced in the prepare assignment.
@@ -180,21 +183,23 @@ Labs are due at 5pm AZ time on the indicated due date.
 
 *The lowest lab grade will be dropped at the end of the semester.*
 
-### Exams
+### Summative assignments
 
-There will be two exams in this course.
-Each exam will be open-note take-home.
-Through these exams you have the opportunity to demonstrate what you’ve learned in the course thus far.
-The exams will focus on both conceptual understanding of the content and application through analysis and computational tasks.
-The content of the exam will be related to the content in videos and reading assignments, lectures, application exercises, and labs.
+There will be two summative assignments in this course.
+Each assignment will be open-note take-home.
+Through these assignments you have the opportunity to demonstrate what you’ve learned in the course thus far.
+The assignments will focus on both conceptual understanding of the content and application through analysis and computational tasks.
+The content of the assignment will be related to the content in videos and reading assignments, lectures, application exercises, and labs.
 
-More detail about the exams will be given during the semester.
+More detail about the assignments will be given during the semester.
 
 ### Project
 
 The purpose of the project is to apply what you’ve learned throughout the semester to analyze an interesting data-driven research question.
-The project will be completed with in teams, and each team will present their work in the final exam session of the semester.
-The write-up will be due on the same day.
+The project will be completed individually, working through coda bench to meet a benchmark.
+The top 5 individuals will receive 5% extra credit in the class.
+The write-up will be due on the same day as the end of the competition.
+*More to come on this.*
 
 *You cannot pass this course if you have not completed the project.*
 
@@ -206,15 +211,16 @@ More information about the project will be provided during the semester.
 
 The final course grade will be calculated as follows:
 
-| Category              | Percentage |
-|-----------------------|------------|
-| Labs                  | 30%        |
-| Project               | 25%        |
-| Exam 1                | 10%        |
-| Exam 2                | 10%        |
-| Application Exercises | 25%        |
+| Category               | Percentage |
+|------------------------|------------|
+| Labs                   | 30%        |
+| Project                | 25%        |
+| Summative assignment 1 | 10%        |
+| Summative assignment 2 | 10%        |
+| Application Exercises  | 25%        |
 
 While there are no specific points allocated to participation, we will be recording your participation (mainly via slack) in periodically throughout the semester, and this information will be used as “extra credit” if you’re in between two grades and a minor bump would help.
+For reference, this would equate to a 1-2% bump.
 
 The final letter grade will be determined based on the following thresholds:
 
@@ -252,7 +258,7 @@ I will help you be providing you with materials and answering questions and sett
 4.  Do the lab.
     The earlier you start, the better.
     It’s not enough to just mechanically plow through the exercises.
-    You should ask yourself how these exercises relate to earlier material, and imagine how they might be changed (to make questions for an exam, for example).
+    You should ask yourself how these exercises relate to earlier material, and imagine how they might be changed (to make questions for an assignment, for example).
 
 5.  Don’t procrastinate.
     The content builds upon what was taught in previous weeks, so if something is confusing to you in Week 2, Week 3 will become more confusing, Week 4 even worse, etc.
@@ -267,21 +273,19 @@ I will help you be providing you with materials and answering questions and sett
 
 Please abide by the following as you work on assignments in this course:
 
--   **Collaboration:** Only work that is clearly assigned as team work should be completed collaboratively.
+-   **Collaboration:** No work is permitted to be completed collaboratively.
 
     -   You may discuss lab assignments with other students; however, you may not directly share (or copy) code or write up with other students.
-        For team assignments, you may collaborate freely within your team.
-        You may discuss the assignment with other teams; however, you may not directly share (or copy) code or write up with another team.
-        Unauthorized sharing (or copying) of the code or write up will be considered a violation for all students involved.
+        Unauthorized sharing (or copying) of the code or write up will be considered a violation for all students involved, resulting in a 0 for the assignment.
 
-    -   You may not discuss or otherwise work with others on the exams.
+    -   You may not discuss or otherwise work with others on the assignments.
         Unauthorized collaboration or using unauthorized materials will be considered a violation for all students involved.
-        More details will be given closer to the exam date.
+        More details will be given closer to the assignment date.
 
     -   For the project, collaboration within teams is not only allowed, but expected.
-        Communication between teams at a high level is also allowed however you may not share code or components of the project across teams.
+        Communication between individuals at a high level is also allowed however you may not share code or components of the project across teams.
 
-    -   On individual assignments you may not directly share work (including code) with another student in this class, and on team assignments you may not directly share work (including code) with another team in this class.
+    -   On assignments you may not directly share work (including code) with another student in this class.
 
 -   **Online resources:** I am well aware that a huge volume of code is available on the web to solve any number of problems.
     Unless I explicitly tell you not to use something, the course’s policy is that you may make use of any online resources (e.g., StackOverflow) but you must explicitly cite where you obtained any code you directly use (or use as inspiration).
@@ -290,7 +294,8 @@ Please abide by the following as you work on assignments in this course:
 -   **Use of generative artificial intelligence (AI)**: You should treat generative AI, such as ChatGPT, the same as other online resources.
     There are two guiding principles that govern how you can use AI in this course[^1]:
 
-    1.  *Cognitive dimension:* Working with AI should not reduce your ability to think clearly. We will practice using AI to facilitate—rather than hinder—learning.
+    1.  *Cognitive dimension:* Working with AI should not reduce your ability to think clearly.
+        We will practice using AI to facilitate—rather than hinder—learning.
 
     2.  *Ethical dimension***:** Students using AI should be transparent about their use and make sure it aligns with academic integrity.
 
@@ -351,18 +356,18 @@ The due dates for assignments are there to help you keep up with the course mate
 We understand that things come up periodically that could make it difficult to submit an assignment by the deadline.
 Note that the lowest lab assignment will be dropped to accommodate such circumstances.
 
--   Labs may be submitted up to 3 days late.
+-   Labs may be submitted up to 2 days late.
     There will be a 5% deduction for each 24-hour period the assignment is late.
 
 -   There is no late work accepted for application exercises, since these are designed to help you prepare for other assessments in the course.
 
--   There is no late work accepted for exams.
+-   There is no late work accepted for assignments.
 
 -   The late work policy for the project will be provided with the project instructions.
 
 ### Waiver for extenuating circumstances
 
-If there are circumstances that prevent you from completing a reading quiz or homework assignment by the stated due date, you may email me ([gchism\@arizona.edu](mailto:gchism@arizona.edu)) before the deadline to waive the late penalty.
+If there are circumstances that prevent you from completing an application exercise or homework assignment by the stated due date, you may email me ([gchism\@arizona.edu](mailto:gchism@arizona.edu)) before the deadline to waive the late penalty.
 In your email, you only need to request the waiver; you do not need to provide explanation.
 This waiver may only be used for once in the semester, so only use it for a truly extenuating circumstance.
 
@@ -389,36 +394,10 @@ If the incomplete is not removed by the instructor within one year the I grade w
 
 Tutoring can be found through the U of A [Think Tank](#0 "https://thinktank.arizona.edu/").
 
-## Attendance policy
-
-Responsibility for class attendance rests with individual students.
-Since regular and punctual class attendance is expected, students must accept the consequences of failure to attend.
-
-However, there may be many reasons why you cannot be in class on a given day, particularly with possible extra personal and academic stress and health concerns this semester.
-I am always available to personally catch you up from missed lectures.
-Please contact me directly about these additional "office hours".
-
-Note that attendance and participation is part of your grade as well.
-
-### Attendance policy related to COVID symptoms, exposure, or infection
-
-Student health, safety, and well-being are the university's top priorities.
-To help ensure your well-being and the well-being of those around you, please do not come to class if you have symptoms related to COVID-19, have had a known exposure to COVID-19, or have tested positive for COVID-19.
-If any of these situations apply to you, you must follow university guidance related to the ongoing COVID-19 pandemic and current health and safety protocols.
-If you are experiencing any COVID-19 symptoms, contact student health at (520) 621-9202.
-To keep the university community as safe and healthy as possible, you will be expected to follow these and the [university guidelines on COVID-19 mitigation](http://www.covid19.arizona.edu/).
-Please reach out to me and your academic dean as soon as possible if you need to quarantine or isolate so that we can discuss arrangements for your continued participation in class.
-
-Notify your instructor(s) if you will be missing up to one week of course meetings and/or assignment deadlines
-
-If you must miss the equivalent of more than one week of class and have an emergency, the Dean of Students is the proper office to contact ([DOS-deanofstudents\@email.arizona.edu](mailto:DOS-deanofstudents@email.arizona.edu)).
-The Dean of Students considers the following as qualified emergencies: the birth of a child, mental health hospitalization, domestic violence matter, house fire, hospitalization for physical health (concussion/emergency surgery/coma/COVID-19 complications/ICU), death of immediate family, Title IX matters, etc.
-
-Please understand that there is no guarantee of an extension when you are absent from class and/or miss a deadline.
-
 ## Accessibility
 
-Accessibility and Accommodations: At the University of Arizona, we strive to make learning experiences as accessible as possible. If you anticipate or experience barriers based on disability or pregnancy, please contact the Disability Resource Center (520-621-3268, https://drc.arizona.edu) to establish reasonable accommodations.
+Accessibility and Accommodations: At the University of Arizona, we strive to make learning experiences as accessible as possible.
+If you anticipate or experience barriers based on disability or pregnancy, please contact the Disability Resource Center (520-621-3268, https://drc.arizona.edu) to establish reasonable accommodations.
 
 *Note: If you've read this far in the syllabus, email me a picture of your pet if you have one or your favorite meme!*
 
@@ -434,16 +413,16 @@ Also watch the video available at <https://arizona.sabacloud.com/Saba/Web_spf/N
 
 ## Important dates
 
--   **Monday, August 26:** Classes begin, Monday schedule
--   **Monday,** **September 02:** Labor Day, no class; Drop/add ends
--   **Wednesday, January 17**: Drop/add ends
--   **Sunday, September 22**: Last day to drop without a W (withdraw)
--   **Sunday, November 03**: Last day to withdraw from a class online through UAccess
--   **Monday, November 11**: Veteran's Day, no class
--   **Wednesday, December 11**: Last day of class, no registration changes can be made
--   **Friday, December 13**: Project presentations, due by 5pm AZ time
+-   **Wednesday, January 15:** Classes begin
+-   **Monday,** **January 20:** Martin Luther King Jr. Day
+-   **Wednesday, January 22**: Drop/add ends
+-   **Tuesday, February 11**: Last day to drop without a W (withdraw)
+-   **Saturday, March 8 - Sunday, March 16:** Spring recess
+-   **Tuesday, April 01**: Last day to withdraw from a class online through UAccess
+-   **Wednesday, May 07**: Last day of class, no registration changes can be made
+-   **Wednesday, May 14**: Project reports, due by 5pm AZ time
 
-For more important dates, see the full [U of A Academic Calendar](https://catalog.arizona.edu/2023-2024-academic-calendar).
+For more important dates, see the full [U of A Academic Calendar](https://archive.catalog.arizona.edu/2022-23/2024-2025-academic-calendar.html).
 
 ## Graduate Student Resources
 
