--- a/labs/lab-1.qmd
+++ b/labs/lab-1.qmd
@@ -43,7 +43,7 @@ By the end of the lab, you will...
 
 ### Clone the repo & start new VS Code window
 
--   Go to the course organization at [github.com/INFO-511-F24](https://github.com/INFO-511-F24) organization on GitHub.
+-   Go to the course organization at [github.com/INFO-511-S25](https://github.com/INFO-511-S25) organization on GitHub.
     Click on the repo with the prefix **lab-1**.
     It contains the starter documents you need to complete the lab.
 
